methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = { var ok = false
  for (i<-0 to 5 ) {droite()
                                                avance()
                                                gauche()
                                                if (vuBiscuit()) { ok =true}}
                            return ok; }